[package]
name = "lew"
version = "0.1.0"
authors = ["Noogen Team <info.noogen@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/noogen-projects/lew"
description = "A Rust library that implements a lightweight editor for Web with WebAssembly"
keywords = ["noogen", "editor", "web", "wasm"]
categories = []

[dependencies]
derive_more = "0.99"
yew = "0.16"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }

[dev-dependencies]
tiny_http = "0.7.0"