[package]
name = "lew"
version = "0.2.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/lew"
description = "A Rust library that implements a lightweight editor for Web with WebAssembly"
keywords = ["noogen", "editor", "web", "wasm"]
categories = ["web-programming"]
exclude = [
    ".git-pre-push.sh",
]

[profile.release]
lto = true

[dependencies]
derive_more = "0.99"
yew = "0.17"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "Event", "EventTarget"] }

[dev-dependencies]
env_logger = "0.8.2"
tiny_file_server = "0.1.3"
pulldown-cmark = "0.8.0"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }