[package]
name = "lew"
version = "0.4.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/lew"
description = "A Rust library that implements a lightweight editor for Web with WebAssembly"
keywords = ["noogen", "editor", "web", "wasm"]
categories = ["web-programming"]
exclude = [
    ".git-pre-push.sh",
]

[profile.release]
lto = true

[dependencies]
derive_more = "0.99"
yew = { git = "https://github.com/XX/yew.git", branch = "other_listener_kind" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "Event", "EventTarget"] }
wasm-dom = "0.1"

[dev-dependencies]
env_logger = "0.9"
tiny_file_server = "0.1"
pulldown-cmark = "0.9"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement"] }